deploy/kae-console/templates/redis.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: kae-redis
  namespace: kae
spec:
  selector:
    matchLabels:
      k8s-app: kae-redis
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: kae-redis
    spec:
      containers:
      - name: master
        image: redis  # or just image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: "1"
            memory: 500Mi
        ports:
        - containerPort: 6379

---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: kae-redis
  name: kae-redis
  namespace: kae
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    k8s-app: kae-redis
