deploy/kae-console/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kae-console
  namespace: kae
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
spec:
  tls:
  - hosts:
    - console.gtapp.xyz
    secretName: gtapp-xyz-tls
  rules:
  - host: console.gtapp.xyz
    http:
      paths:
      - backend:
          serviceName: kae-console
          servicePort: 80
